--- a/general/index.html
+++ b/general/index.html
@@ -49,12 +49,23 @@
               <pre id="uv-error-code"></pre>
             </div>
           </center>
-          <center>
-            <a href="https://discord.gg/WSUy3dHFRh"> <a>
-            <a href="https://github.com/enterheadlines/entertopia"> </a>
-            <a href="profile.html"> </a>
+          <br>
+          <center> 
+           <a href="pages/dashboard.html"><button class="button">Dashboard</button></a>&nbsp;&nbsp;&nbsp;
+           <a href="https://discord.gg/WSUy3dHFRh"><button class="button">Join Our discord</button></a>&nbsp;&nbsp;&nbsp;
+           <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
           </center>
-
+          <br>
+          <br>
+          <br>
+          <br>
+          <center>
+            <div style="padding: 40x; border-radius: 15px; background-color: #1f1f1f; width: 30%; padding-top: 25px; padding-bottom: 25px;">
+    
+            <p><b style="color: rgb(124, 124, 124);">Ads open for sale</b></p>
+          </div>
+          </center>
+<script src="/general/js/cloak.js"></script>
 <script src="/static/uv/uv.bundle.js" defer></script>
 <script src="/static/uv/uv.config.js" defer></script>
 <script src="/static/register-sw.js" defer></script>
@@ -133,7 +144,16 @@
     <script>
         let splashtext = [
       'Made by Infamy/enterheadlines',
-       'Join our discord fr'
+       'Join our discord fr',
+       'zoo wee mama',
+       'im cool now that i made this site',
+       'most basic ubg site ever',
+       'Entertopia is ass compared to this',
+       'these games are so good',
+       'very lightweight site',
+       'this is closed source',
+       'anyone who says this site is ass is lying',
+       'tell this site to everyone you know'
      ]
      
      document.getElementById('splash').innerText = splashtext[Math.floor(Math.random() * splashtext.length)]
