--- a/general/index.html
+++ b/general/index.html
@@ -25,12 +25,12 @@
     <body>
         <div id="particles-js"></div>
         <nav>
-            <a href="home.html" class="left-link">Starlight</a>
+            <a href="/general/index.html" class="left-link">Starlight</a>
             <div class="nav-links">
-                <a href="about.html"><img src="/img/arcade.png" height="15px" width="15px">&nbsp;Arcade</a>
-                <a href="services.html"><img src="/img/apps.png" height="15px" width="15px">&nbsp;Utilities</a>
-                <a href="contact.html"><img src="/img/movies.png" height="15px" width="15px">&nbsp;Media</a>
-                <a href="extra.html"><img src="/img/settings.png" height="15px" width="15px">&nbsp;Settings</a>
+                <a href="/general/pages/arcade.html"><img src="/img/arcade.png" height="15px" width="15px">&nbsp;Arcade</a>
+                <a href="/general/pages/utilities.html"><img src="/img/apps.png" height="15px" width="15px">&nbsp;Utilities</a>
+                <a href="/general/pages/media.html"><img src="/img/movies.png" height="15px" width="15px">&nbsp;Media</a>
+                <a href="/general/pages/settings.html"><img src="/img/settings.png" height="15px" width="15px">&nbsp;Settings</a>
             </div>
         </nav>
         <br>
@@ -51,7 +51,7 @@
           </center>
           <br>
           <center> 
-           <a href="pages/dashboard.html"><button class="button">Dashboard</button></a>&nbsp;&nbsp;&nbsp;
+           <a href="/general/pages/dashboard.html"><button class="button">Dashboard</button></a>&nbsp;&nbsp;&nbsp;
            <a href="https://discord.gg/WSUy3dHFRh"><button class="button">Join Our discord</button></a>&nbsp;&nbsp;&nbsp;
            <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
           </center>
