--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Starlight - Home</title>
+        <title>Starlight - 404</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
         <meta name="icon" href="/img/starlight.png">
         <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy">
@@ -12,7 +12,6 @@
         <link rel="stylesheet" href="/general/css/index.css">
         <!--js link here-->
         <script src="/general/js/index.js"></script>
-        <script src="/serviceworker.js"></script>
          <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-36EM66LHER"></script>
 <script>
@@ -34,45 +33,11 @@
                 <a href="/general/pages/settings.html"><img src="/img/settings.png" height="13px" width="13px">&nbsp;Settings</a>
             </div>
         </nav>
-        <br>
-        <br>
-        <br>
-        <div class="text">Welcome to Starlight</div>
-        <div id="splash">UNKNOWN</div>
-        <br>
-        <center>
-            <form id="uv-form">
-              <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
-              <input id="uv-address" type="text" placeholder="Search the web" class="form__input"/>
-            </form>
-            <div class="desc left-margin">
-              <p id="uv-error"></p>
-              <pre id="uv-error-code"></pre>
-            </div>
-          </center>
-          <br>
-          <center> 
-           <a href="/general/pages/dashboard.html"><button class="button">Dashboard</button></a>&nbsp;&nbsp;&nbsp;
-           <a href="https://discord.gg/WSUy3dHFRh"><button class="button">Join Our discord</button></a>&nbsp;&nbsp;&nbsp;
-           <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
-          </center>
-          <br>
-          <br>
-          <br>
-          <br>
-          <center>
-            <div style="padding: 40x; border-radius: 15px; background-color: #1f1f1f; width: 30%; padding-top: 25px; padding-bottom: 25px;">
-    
-            <p><b style="color: rgb(124, 124, 124);">Ads open for sale</b></p>
-          </div>
-          </center>
-<script src="/general/js/cloak.js"></script>
-<script src="/static/uv/uv.bundle.js" defer></script>
-<script src="/static/uv/uv.config.js" defer></script>
-<script src="/static/register-sw.js" defer></script>
-<script src="/static/search.js" defer></script>
-<script src="/static/index.js" defer></script>
-<script src="/static/error.js" defer></script>
+        <div class="text">404</div>
+        <div id="tiger">If you came upon this page by mistake, try checking the URL in your web browser.</div> 
+      <div id="tiger" >If you used the proxy and came upon this page just refresh the page.</div> <br> <center>
+                <button onclick="window.location.reload();" id="type">Refresh Page</button>
+                </center>
     </body>
 </html>
     <!-- Include Particle.js library -->
@@ -142,23 +107,7 @@
             retina_detect: true
         });
     </script>
-    <script>
-        let splashtext = [
-      'Made by Infamy/enterheadlines',
-       'Join our discord fr',
-       'zoo wee mama',
-       'im cool now that i made this site',
-       'most basic ubg site ever',
-       'Entertopia is ass compared to this',
-       'these games are so good',
-       'very lightweight site',
-       'this is closed source',
-       'anyone who says this site is ass is lying',
-       'tell this site to everyone you know'
-     ]
-     
-     document.getElementById('splash').innerText = splashtext[Math.floor(Math.random() * splashtext.length)]
-     </script>
+ 
      <script>
         let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
