--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -66,33 +66,33 @@
                 <button onclick="searchGames()">Search</button>
               </div>
               <br>
-        <div class="row">
-            <div class="column">
-                <div class="game-image" style="background-image: url('game1.jpg');"></div>
-                <div class="game-info">
-                    <h2>Game Title 1</h2>
-                    <p>Short description of Game 1.</p>
-                    <a href="link_to_game1" class="play-button">Play Now</a>
+              <div class="row">
+                <div class="column" data-category=" ">
+                    <div class="game-image" style="background-image: url('https://starlight-phi.vercel.app/img/1.png');"></div>
+                    <div class="game-info">
+                        <h2>1</h2>
+                        <p>Simple puzzle game</p>
+                        <a href="link_to_game1" class="play-button">Play Now</a>
+                    </div>
                 </div>
-            </div>
-            <div class="column">
-                <div class="game-image" style="background-image: url('game2.jpg');"></div>
-                <div class="game-info">
-                    <h2>Game Title 2</h2>
-                    <p>Short description of Game 2.</p>
-                    <a href="link_to_game2" class="play-button">Play Now</a>
+                <div class="column" data-category=" ">
+                    <div class="game-image" style="background-image: url('https://starlight-phi.vercel.app/img/1v1.jpeg');"></div>
+                    <div class="game-info">
+                        <h2>1v1.lol</h2>
+                        <p>Simple Battle royale game</p>
+                        <a href="link_to_game2" class="play-button">Play Now</a>
+                    </div>
                 </div>
-            </div>
-            <div class="column">
-                <div class="game-image" style="background-image: url('game3.jpg');"></div>
-                <div class="game-info">
-                    <h2>Game Title 3</h2>
-                    <p>Short description of Game 3.</p>
-                    <a href="link_to_game3" class="play-button">Play Now</a>
+                <div class="column" data-category=" ">
+                    <div class="game-image" style="background-image: url('https://starlight-phi.vercel.app/img/1v1space.png');"></div>
+                    <div class="game-info">
+                        <h2>1v1 Space</h2>
+                        <p>Space game</p>
+                        <a href="link_to_game3" class="play-button">Play Now</a>
+                    </div>
                 </div>
+                <!-- Add more game cards as needed -->
             </div>
-            <!-- Add more game cards as needed -->
-        </div>
     </body>
 </html>
     <!-- Include Particle.js library -->
