--- a/general/index.html
+++ b/general/index.html
@@ -43,7 +43,7 @@
         <center>
             <form id="uv-form">
               <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/> 
-              <input id="uv-address" type="text" placeholder="Search the web" class="form__input"/>
+              <input id="uv-address" type="text" placeholder="Search the web with Starlight" class="form__input"/>
             </form>
             <div class="desc left-margin">
               <p id="uv-error"></p>
