--- a/general/index.html
+++ b/general/index.html
@@ -54,7 +54,7 @@
           <center> 
            <a href="/general/pages/dashboard.html"><button class="button">Dashboard</button></a>&nbsp;&nbsp;&nbsp;
            <a href="/general/pages/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
-           <a href="https://discord.gg/WSUy3dHFRh"><button class="button">Join Our discord</button></a>&nbsp;&nbsp;&nbsp;
+           <a href="https://discord.gg/WSUy3dHFRh"><button class="button">Join Our Discord</button></a>&nbsp;&nbsp;&nbsp;
            <a id="openScriptButton"><button class="button">Cloak</button></a>&nbsp;
           </center>
           <br>
