--- a/general/pages/partnership.html
+++ b/general/pages/partnership.html
@@ -36,21 +36,17 @@
         <br>
         <br>
         <br>
-       <center>
-        <h1>Partnerships</h1>
-       </center>
-       <br>
        <main class="main">
         <section class="partners">
             <div class="partner" style="animation-delay: 0.1s;">
                 <img src="/img/glitch.png" alt="Partner One"> <!-- Replace with Partner One Image URL -->
                 <h2><a href="https://glitchnetwork.xyz" target="_blank">Glitch</a></h2>
-                <p>A free and swift unblocker.</p>
+                <p>Glitch is a powerful and secure web proxy that enables users to effortlessly unblock websites while ensuring their privacy and anonymity online.</p>
             </div>
             <div class="partner" style="animation-delay: 0.2s;">
                 <img src="/img/learnsci.png"> <!-- Replace with Partner Two Image URL -->
                 <h2><a href="https://sites.google.com/view/learn-sci/home" target="_blank">Learnsci</a></h2>
-                <p>Learnsci is a unblocked gaming website with over 100+ games and AI</p>
+                <p>LearnSci is an innovative platform that hosts over 200 games powered by AI, making learning interactive and engaging for users of all ages.</p>
             </div>
             <div class="partner" style="animation-delay: 0.3s;">
                 <img src="/img/szvycentral.jpeg" alt="Partner Three"> <!-- Replace with Partner Three Image URL -->
@@ -62,16 +58,8 @@
                 <h2><a href="https://brunysixl.xyz" target="_blank">Brunysixl</a></h2>
                 <p>Brunysixl is an unblocked gaming website that features a wide range of free online games and a slick UI, ensuring a seamless and enjoyable gaming experience.</p>
             </div>
-            <div class="partner" style="animation-delay: 0.5s;">
-                <img src="/img/zembieproxies.png" alt="Partner Three"> <!-- Replace with Partner Three Image URL -->
-                <h2><a href=" " target="_blank">Zembie Proxies</a></h2>
-                <p>Zembie Proxies offers a comprehensive list of free unblocked proxies and games, allowing users to access a variety of online content with ease and security.</p>
-            </div>
         </section>
     </main>
-      <center>
-                <button onclick="window.location.reload();" id="type">Refresh Page</button>
-                </center>
     </body>
 </html>
     <!-- Include Particle.js library -->
