--- a/general/pages/profile.html
+++ b/general/pages/profile.html
@@ -3,7 +3,7 @@
     <head>
         <title>Starlight - Dashboard</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
-        <meta name="icon" href="/img/starlight.png">
+        <link rel="icon" href="/img/starlight.png">
         <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Starlight">
@@ -36,10 +36,11 @@
         <br>
         <br>
         <br>
+        <br>
         <div id="profile-maker">
             <h1 id="main-heading">Profile</h1>
             <div id="profile">
-                <img id="profile-pic" src="default-profile.png" alt="Profile Picture">
+                <img id="profile-pic" src=" " alt="Profile Picture">
                 <h2 id="username-display">User123</h2>
                 <p id="bio-display">This is my bio.</p>
             </div>
