--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -3,7 +3,7 @@
     <head>
         <title>Starlight - Arcade</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
-        <meta name="icon" href="/img/starlight.png">
+        <link rel="icon" href="/img/starlight.png">
         <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Starlight">
@@ -74,31 +74,27 @@
               </div>
               <br>
               <div class="row">
-                <div class="column" data-category=" ">
-                    <div class="game-image" style="background-image: url('https://starlight-phi.vercel.app/img/1.png');"></div>
-                    <div class="game-info">
+                <div class="column" data-category="">
+                    <img src="/img/1.png">
+                    <div class="description">
                         <h2>1</h2>
-                        <p>Simple puzzle game</p>
-                        <a href="link_to_game1" class="play-button">Play Now</a>
+                        <p>Simple puzzle game</p> <!-- Shortened description -->
                     </div>
                 </div>
-                <div class="column" data-category=" ">
-                    <div class="game-image" style="background-image: url('https://starlight-phi.vercel.app/img/1v1.jpeg');"></div>
-                    <div class="game-info">
+                <div class="column" data-category="">
+                    <img src="/img/1v1.jpeg">
+                    <div class="description">
                         <h2>1v1.lol</h2>
-                        <p>Simple Battle royale game</p>
-                        <a href="link_to_game2" class="play-button">Play Now</a>
+                        <p>Simple Battle royale game</p> <!-- Shortened description -->
                     </div>
                 </div>
-                <div class="column" data-category=" ">
-                    <div class="game-image" style="background-image: url('https://starlight-phi.vercel.app/img/1v1space.png');"></div>
-                    <div class="game-info">
-                        <h2>1v1 Space</h2>
-                        <p>Space game</p>
-                        <a href="link_to_game3" class="play-button">Play Now</a>
+                <div class="column" data-category="">
+                    <img src="/img/1v1space.png">
+                    <div class="description">
+                        <h2>1v1.space</h2>
+                        <p>Space game</p> <!-- Shortened description -->
                     </div>
                 </div>
-                <!-- Add more game cards as needed -->
             </div>
     </body>
 </html>
