--- a/general/pages/partnership.html
+++ b/general/pages/partnership.html
@@ -3,7 +3,7 @@
     <head>
         <title>Starlight - Partnerships</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
-        <meta name="icon" href="/img/starlight.png">
+        <link rel="icon" href="/img/starlight.png">
         <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Starlight">
