--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading Screen</title>
+    <title>Loading...</title>
+    <link rel="icon" href="/img/starlight.png">
     <style>
         body {
             display: flex;
@@ -53,6 +54,6 @@
     // Redirect to index.html after a short delay
 setTimeout(function() {
     window.location.href = '/general/index.html';
-}, 200); // Redirects after 1 second
+}, 1000); // Redirects after 1 second
 
 </script>
