--- a/general/pages/profile.html
+++ b/general/pages/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Starlight - Dashboard</title>
+        <title>Starlight - Profile</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
         <link rel="icon" href="/img/starlight.png">
         <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy">
@@ -40,7 +40,7 @@
         <div id="profile-maker">
             <h1 id="main-heading">Profile</h1>
             <div id="profile">
-                <img id="profile-pic" src=" " alt="Profile Picture">
+                <img id="profile-pic" src="/img/defaultprofile.png" alt="Profile Picture">
                 <h2 id="username-display">User123</h2>
                 <p id="bio-display">This is my bio.</p>
             </div>
