--- a/general/index.html
+++ b/general/index.html
@@ -31,6 +31,7 @@
                 <a href="/general/pages/arcade.html"><img src="/img/arcade.png" height="13px" width="13px">&nbsp;Arcade</a>
                 <a href="/general/pages/utilities.html"><img src="/img/apps.png" height="13px" width="13px">&nbsp;Utilities</a>
                 <a href="/general/pages/media.html"><img src="/img/movies.png" height="13px" width="13px">&nbsp;Media</a>
+                <a href="/general/pages/ai.html"><img src="/img/ai.png" height="13px" width="13px">&nbsp;AI</a>
                 <a href="/general/pages/settings.html"><img src="/img/settings.png" height="13px" width="13px">&nbsp;Settings</a>
             </div>
         </nav>
