--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Starlight - Profile</title>
+        <title>Starlight - Dasboard</title>
         <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
         <link rel="icon" href="/img/starlight.png">
         <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy">
@@ -36,6 +36,19 @@
         <br>
         <br>
         <br>
+        <br>
+        <center> 
+            <a href="/general/pages/arcade.html"><button class="button">Arcade</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/general/pages/utilities.html"><button class="button">Utilities</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/general/pages/media.html"><button class="button">Media</button></a>&nbsp;&nbsp;&nbsp;
+            <a href="/general/pages/ai.html"><button class="button">AI</button></a>&nbsp;&nbsp;&nbsp;
+           </center>
+           <center> 
+            <a href="/general/pages/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
+            <a href=" "><button class="button">Credits</button></a>&nbsp;&nbsp;&nbsp;
+            <a href=" "><button class="button">Terms</button></a>&nbsp;&nbsp;&nbsp;
+            <a href=" "><button class="button">Policy</button></a>&nbsp;&nbsp;&nbsp;
+           </center>
         <br>
         <div id="profile-maker">
             <h1 id="main-heading">Profile</h1>
