--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -37,12 +37,17 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
+        <br>
+        <center><h1>Navigation</h1></center>
         <center> 
             <a href="/general/pages/arcade.html"><button class="button">Arcade</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/utilities.html"><button class="button">Utilities</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/media.html"><button class="button">Media</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/ai.html"><button class="button">AI</button></a>&nbsp;&nbsp;&nbsp;
            </center>
+           <br>
            <center> 
             <a href="/general/pages/partnership.html"><button class="button">Partnerships</button></a>&nbsp;&nbsp;&nbsp;
             <a href=" "><button class="button">Credits</button></a>&nbsp;&nbsp;&nbsp;
