--- a/401.html
+++ b/401.html
@@ -30,6 +30,7 @@
                 <a href="/general/pages/arcade.html"><img src="/img/arcade.png" height="13px" width="13px">&nbsp;Arcade</a>
                 <a href="/general/pages/utilities.html"><img src="/img/apps.png" height="13px" width="13px">&nbsp;Utilities</a>
                 <a href="/general/pages/media.html"><img src="/img/movies.png" height="13px" width="13px">&nbsp;Media</a>
+                <a href="/general/pages/ai.html"><img src="/img/ai.png" height="13px" width="13px">&nbsp;AI</a>
                 <a href="/general/pages/settings.html"><img src="/img/settings.png" height="13px" width="13px">&nbsp;Settings</a>
             </div>
         </nav>
@@ -43,6 +44,7 @@
                 </center>
     </body>
 </html>
+<script src="/general/js/cloak.js"></script>
     <!-- Include Particle.js library -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
