--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -45,10 +45,9 @@
         <div class="chat-container">
             <div id="chat-box"></div>
             <input type="text" id="user-input" placeholder="Type your message here...">
-            <button id="send-button">Send</button>
         </div>
     </body>
-</html>
+</html><script src="/general/js/cloak.js"></script>
     <!-- Include Particle.js library -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
