--- a/general/pages/arcade.html
+++ b/general/pages/arcade.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
     </body>
-</html>
+</html><script src="/general/js/cloak.js"></script>
     <!-- Include Particle.js library -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
