--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -58,7 +58,7 @@
         <br>
      <br>
      
-    </body>
+    </body><script src="/general/js/cloak.js"></script>
 </html>
     <!-- Include Particle.js library -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
