--- a/general/pages/partnership.html
+++ b/general/pages/partnership.html
@@ -63,6 +63,7 @@
         </section>
     </main>
     </body>
+    <script src="/general/js/cloak.js"></script>
 </html>
     <!-- Include Particle.js library -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
