--- a/general/pages/ai.html
+++ b/general/pages/ai.html
@@ -45,6 +45,7 @@
         <div class="chat-container">
             <div id="chat-box"></div>
             <input type="text" id="user-input" placeholder="Type your message here...">
+            <button id="send-button">Send</button>
         </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
