--- a/general/pages/dashboard.html
+++ b/general/pages/dashboard.html
@@ -42,6 +42,7 @@
         <br>
         <br>
         <center><h1>Starlight's Dashboard</h1></center>
+
         <center> 
             <a href="/general/pages/arcade.html"><button class="button">Arcade</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/utilities.html"><button class="button">Utilities</button></a>&nbsp;&nbsp;&nbsp;
@@ -55,8 +56,7 @@
             <a href="/general/pages/terms.html"><button class="button">Terms</button></a>&nbsp;&nbsp;&nbsp;
             <a href="/general/pages/policy.html"><button class="button">Policy</button></a>&nbsp;&nbsp;&nbsp;
            </center>
-        <br>
-     <br>
+           <a id="time">00:00PM</a>
      
     </body><script src="/general/js/cloak.js"></script>
 </html>
