--- a/general/pages/suggestions.html
+++ b/general/pages/suggestions.html
@@ -38,19 +38,9 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div id="container">
-            <h1 id="header">Suggestions</h1>
-            <input type="text" id="gameName" placeholder="Game Name" required>
-            <input type="url" id="gameUrl" placeholder="Game URL" required>
-            <button id="melt">Submit</button>
-            <div class="message" id="message"></div>
-        </div>
+      <iframe src="" class="iframe"></iframe>
     </body>
-    <script src="/general/js/suggestions.js"></script>
+  
 </html><script src="/general/js/cloak.js"></script>
     <!-- Include Particle.js library -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
